Authorization Filter added

--- a/HCS.StaffManagement/HCS.StaffManagement/Web.config
+++ b/HCS.StaffManagement/HCS.StaffManagement/Web.config
@@ -15,7 +15,7 @@
   </connectionStrings>
   <appSettings>
     <add key="BaseUrl" value="http://localhost:60060/" />
-    <add key="HCSStaff" value="C31D827B-8BEA-4E5F-9FEF-AC05C7C887CA" />
+    <add key="ScreteKey" value="" />  <!--Added SecreteKey from database Authorization table-->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
