--- a/HCS.StaffManagement/HCS.StaffManagement/HCS.StaffManagement.csproj
+++ b/HCS.StaffManagement/HCS.StaffManagement/HCS.StaffManagement.csproj
@@ -354,6 +354,7 @@
     <Content Include="Images\bg.jpg" />
     <Content Include="Images\manpower1.jpg" />
     <Content Include="Images\securityguard.jpg" />
+    <Content Include="Images\UnauthorizedAccess.jpg" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -503,6 +504,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\Unauthorized.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
